# dfbnet-freihalter-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dfbnet_freihalter_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  dates.py  server.py
docs/: ARCHITECTURE.md  PUBLISHING.md  SETUP.md
scripts/: dfbnet_login_probe.py
tests/: test_dates_and_client.py
