[project]
name = "dfbnet-freihalter-mcp"
version = "0.1.0"
description = "Inoffizieller lokaler MCP-Server und CLI-Client für DFBNet SRIA Freihalter"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Contributors" }
]
keywords = ["mcp", "dfbnet", "sria", "referee", "freihalter", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.2.0",
  "python-dotenv>=1.0.1",
  "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
dfbnet-freihalter-mcp = "dfbnet_freihalter_mcp.server:main"
dfbnet-freihalter = "dfbnet_freihalter_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
